# myw

./: Cargo.toml  README.md
benches/: report.rs  timelog.rs
resources/: 2024-w07-example.md  bench_long.md  bench_long_scrambled.md  bench_short.md
src/: lib.rs  main.rs  report.rs  timelog.rs
src/commands/: debug.rs  mod.rs  report.rs
src/timelog/: entry.rs  mod.rs
src/utils/: daterange.rs  mod.rs
